# Ex3

./: BinaryExpression.cpp  BinaryExpression.h  BoundedVariable.cpp  BoundedVariable.h  CMakeLists.txt  ClientSendingData.cpp  ClientSendingData.h  Command.h  CommandExpression.h  ConditionCommand.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.h  DataManager.cpp  DataManager.h  DataServerReader.cpp  DataServerReader.h  Div.cpp  Div.h  DoubleVariable.h  EqualityCommand.h  Expression.h  FIleCreator.cpp  FileCreator.h  IfCommand.cpp  IfCommand.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  ListThreadSafeMap.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Number.cpp  Number.h  OpenDataServerCommand.h  Parser.cpp  Parser.h  (+18 more)
